04-check-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: check-cluster
  namespace: check-cluster
  labels:
    app: check-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: check-cluster
  template:
    metadata:
      labels:
        app: check-cluster
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - name: http
              containerPort: 80
