04-check-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: check-cluster
  namespace: check-cluster
spec:
  selector:
    app: check-cluster
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
